# mytardis_ingestion

./: #CPG-process_xls_to_json.py#  #README.md#  #README.rst#  .#README.md  .coverage  .env-example  .gitignore  .pre-commit-config.yaml  .pylintrc  BIRUGroupCopy.py  CPG-assign_raids.py  CPG-process_dataset_xls_to_json.py  CPG-process_dataset_xls_to_json.py~  CPG-process_xls_to_json.py  CPG-process_xls_to_json.py~  Generic_ingestion.py  PGG-ingest.py  PGG-ingest.py~  PrintGroup.py  PrintGroup.py~  README.md  README.rst  Untitled.ipynb  Validate_raids.py  abi_extraction_and_ingestion.py  data.json  fixup_raids.py  generic_extraction_and_ingestion.py  generic_extraction_and_ingestion.py.orig  generic_extraction_and_ingestion_BIRU.py  generic_extraction_and_ingestion_test.py  generic_ingestion.py  harvester.py  index.html  make_plots.py  mech_test.py  non_IDW_ingestion.py  profile_generator.py  pyproject.toml  raid_test.py  (+11 more)
.github/: dependabot.yml
.github/workflows/: mytardis_ingestion.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  base64.data.json  base64.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  colorsys.data.json  colorsys.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.data.json  contextvars.meta.json  copy.data.json  copy.meta.json  dataclasses.data.json  (+73 more)
Core/: __init__.py  exceptions.py  factory.py  mt_rest.py  rest.py
Core/Forges/: experiment.py
Core/Foundries/: foundry.py
Core/Foundry/: __init__.py  foundry.py
Core/Overseers/: #minion.py#  #project_minion.py#  datafile_minion.py  dataset_minion.py  experiment_minion.py  institution_minion.py  minion.py  overseer.py  project_minion.py  schema_minion.py
Core/filehandling/: #s3_filehandler.py#  s3_filehandler.py
Core/forge/: __init__.py  datafile.py  dataset.py  experiment.py  instrument.py  project.py  user.py
Core/helper_functions/: __init__.py  config_helper.py  ldap.py
Core/helpers/: __init__.py  checksum.py  config_helper.py  exceptions.py  helper.py  ldap.py  mt_json.py  raid.py  rest.py  ror.py  s3_tools.py  sanity.py
Core/overseer/: .#overseer.py  __init__.py  datafile_minion.py  dataset_minion.py  experiment_minion.py  institution_minion.py  instrument_minion.py  minion.py  overseer.py  project_minion.py  schema_minion.py
Documentation/: HelperModule.dia
Filehandling/: s3_filehandler.py
Legacy stuff to keep/: projectdb.py
Testing/: dataset.json  dataset2.json  experiment.json  experiment_update_groups.json  lists3.py  out.html  project.json  write_test.py
Testing_BIRU/: datafiles copy.json  dataset copy.json  experiment copy.json  project copy.json
core/: __init__.py
core/filehandling/: __init__.py
core/forge/: datafile.py  project.py
core/helpers/: config_helper.py  exceptions.py
core/overseer/: __init__.py  datafile_minion.py  dataset_minion.py  overseer.py  project_minion.py  schema_minion.py
docs/: automake.sh  modules.rst
docs/Server-side-validation/: scoping and design.md
docs/source/: conf.py  index.rst
filehandlers/: __init__.py  filehandler.py  s3_filehandler.py  solarix_filehandler.py
harvester/: __init__.py  harvest.py  harvester.py  new_harvester.py  solarix_harvester.py
harvester-old/: __init__.py  harvester.py  new_harvester.py
harvester/filehandlers/: __init__.py  filehandler.py  new_s3_filehandler.py  s3_filehandler.py  s3uploader.py.old  solarix_filehandler.py  solarix_with_tar.py
harvester/helper/: __init__.py  constants.py  helper.py  helper.py.old
harvester/ingestor/: __init__.py  ingestor.py  uploader.py
harvester/mailserver/: __init__.py  mailserver.py
helper/: __init__.py  helper.py  ldap.py  projectdb.py  raid.py  test_helper.py  zip_functions.py
ingestor/: __init__.py  experiment.py  facility.py  ingestor.py  institution.py  project.py  uploader.py
mailserver/: mailserver.py
parsers/: __init__.py  csv_parser.py  genomics_print.py  parser.py  solarix_parser.py  testCSVparser.py
s3uploader/: s3uploader.py
samples/: async_mytardis_requests.py  auto_scan.py  extraction_and_ingestion_biru_example.py  generic_extraction_and_ingestion.py  generic_ingestion.py  ingestion_biru_example.py  ro_crate_ingestion_example.py  smelter_crucible_forge_example.py
scripts/: run_biru_scan.sh
setup/: README.md  manjaro-gnome_venv-setup.zsh  ubuntu_venv-setup.sh  venv_setup.sh  vscode_extensions.sh  vscode_extensions.txt
src/: ids.py  ingestion.py  ingestion_biru.py
templates/: datafile.yaml  dataset.yaml  experiment.yaml  project.yaml  template - barebones.py
test_data/: test_data_read.json
tests/: conftest.py  fixtures_constants.py  fixtures_dataclasses.py  test_abi_beneficiation.py  test_abi_beneficiations.py  test_abi_extraction_plant.py  test_abi_miner.py  test_abi_prospector.py  test_biru_beneficiation.py  test_biru_extraction.py  test_biru_prospector.py  test_common_file_checks.py  test_config.py  test_conveyor.py  test_crucible.py  test_custom_data_types.py  test_dataclasses.py  test_extraction_plant.py  test_factory.py  test_forge.py  test_helpers.py  test_ingestion_factory.py  test_ingestion_manifest.py  test_inspector.py  test_mt_rest.py  test_mytardis_client_common_types.py  test_mytardis_client_data_types.py  test_mytardis_client_rest_factory.py  test_mytardis_ingestion.py  test_overseer_cache.py  test_overseers.py  test_profile_common.py  test_project_aware.py  test_ro_crate_helpers.py  test_ro_crate_parser.py  test_smelter.py  test_utils_filesystem.py  test_utils_filesystem_nodes.py  test_utils_type_helpers.py  test_utils_validation.py  (+7 more)
(+580 files in other folders)
