[tool.poetry]
name = "mytardis_ingestion"
version = "0.2.0"
description = ""
authors = ["Chris Seal <c.seal@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
backoff = "^2.2.1"
PyYAML = "^6.0"
python-decouple = "^3.8"
types-PyYAML = "^6.0.12"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
pytz = "^2023.3"
python-dateutil = "^2.8.2"
types-pytz = "^2023.3.0.0"
types-python-dateutil = "^2.8.19.12"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
mock = "^5.0.2"
pytest-dependency = "^0.5.1"
pylint = "^2.17.4"
interrogate = "^1.5.0"
mypy = "^1.2"
types-requests = "^2.30.0"
types-mock = "^5.0.0"
PySnooper = "^1.1.0"
responses = "^0.23.1"
pre-commit = "^3.3.1"
bandit = "^1.7.5"
pytest-cov = "^4.0.0"
genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
click = "8.1.3"
coverage = {extras = ["toml"], version = "^7.2.5"}
pyright = "^1.1.306"
devtools = "^0.11.0"
sphinx = "^7.0.0"

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["tests", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
fail-under = 50

[tool.mypy]
mypy_path = [
	  "^src$"
	  ]
ignore_missing_imports = true
exclude = [
       "^tests/.*$",
       "^docs/.*$",
       ]
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = [
       	     "tests",
       	     "docs",
       	     ]
skips = ['B101']

[tool.coverage.run]
omit = [
     "tests/*",
     "docs/*",
     "src/specific_implementations/*",
     "src/helpers/*"
     ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["long: marks tests as long running (deselect with '-m \"not long\"')"]
