[tool.poetry]
name = "mytardis_ingestion"
version = "0.2.0"
description = ""
authors = ["Chris Seal <c.seal@auckland.ac.nz>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
backoff = "^2.2.1"
PyYAML = "^6.0"
python-decouple = "^3.8"
types-PyYAML = "^6.0.12"
pydantic = "^2.4.2"
pytz = "^2024.1"
python-dateutil = "^2.8.2"
types-pytz = "^2024.1.0.20240417"
types-python-dateutil = "^2.8.19.13"
python-slugify = "^8.0.1"
dependency-injector = "^4.41.0"
pydantic-settings = "^2.0.3"
validators = "^0.28.3"
typer = "^0.12.0"
rocrate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
wily = "^1.25.0"
pytest-xdist = "^3.2.1"
types-python-slugify = "^8.0.0.2"
pytest-mock = "^3.11.1"
bandit = "^1.7.5"
pytest = "^7.4.2"
mock = "^5.0.2"
pytest-dependency = "^0.5.1"
pylint = "^3.0.1"
interrogate = "^1.5.0"
mypy = "^1.6"
types-requests = "^2.31.0"
types-mock = "^5.1.0"
PySnooper = "^1.1.0"
responses = "^0.25.3"
pre-commit = "^3.5.0"
pytest-cov = "^5.0.0"
genbadge = {extras = ["tests", "coverage"], version = "^1.0.6"}
click = "8.1.7"
coverage = {extras = ["toml"], version = "^7.3.2"}
pyright = "^1.1.334"
devtools = "^0.12.2"
sphinx = "^7.2.6"
flake8-bandit = "^4.1.1"
flake8-pyproject = "^1.2.3"
toml = "^0.10.2"
pyproject-pre-commit = "^0.1.4"
pyfakefs = "^5.3.1"
black = "^24.4.0"
isort = "^5.13.2"

[tool.poetry.scripts]
ids = 'src.ids:app'

[tool.isort]
profile = "black"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["tests", "docs", "build", "samples"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", "^test$"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
fail-under = 50

[tool.mypy]
files = [
       "src/**/*.py"
	  ]
ignore_missing_imports = true
exclude = [
       "^tests/.*$",
       "^docs/.*$",
       "^samples/.*$",
       ]
plugins = ["pydantic.mypy"]
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.bandit.assert_used]
skips = ["./tests/*", "test_*.py", "samples/*"]


[tool.coverage.run]
omit = [
     "tests/*",
     "docs/*",
     "src/specific_implementations/*",
     "src/helpers/*"
     ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["long: marks tests as long running (deselect with '-m \"not long\"')"]
